[gd_scene load_steps=3 format=2]

[ext_resource path="res://game/cards/hands/HandEnemy.gd" type="Script" id=1]
[ext_resource path="res://game/cards/hands/card/Card.tscn" type="PackedScene" id=2]

[node name="HandEnemy" type="VBoxContainer"]

anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_left = -104.0
margin_bottom = 100.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
script = ExtResource( 1 )
_sections_unfolded = [ "Rect" ]

[node name="OpenCards" type="HBoxContainer" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 104.0
margin_bottom = 48.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="Card" parent="OpenCards" index="0" instance=ExtResource( 2 )]

[node name="Card2" parent="OpenCards" index="1" instance=ExtResource( 2 )]

margin_left = 36.0
margin_right = 68.0

[node name="Card3" parent="OpenCards" index="2" instance=ExtResource( 2 )]

margin_left = 72.0
margin_right = 104.0

[node name="HiddenCards" type="HBoxContainer" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 52.0
margin_right = 104.0
margin_bottom = 100.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="Card" parent="HiddenCards" index="0" instance=ExtResource( 2 )]

[node name="Card2" parent="HiddenCards" index="1" instance=ExtResource( 2 )]

margin_left = 36.0
margin_right = 68.0

[node name="Card3" parent="HiddenCards" index="2" instance=ExtResource( 2 )]

margin_left = 72.0
margin_right = 104.0


